# Sistema-para-an-lisis-de-mercanc-a-

./: .env.example  .gitignore  README.md  TESTING.md  netlify.toml  package.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py  queries.py
backend/app/core/: config.py
backend/app/db/: sql_server.py
backend/app/models/: query.py
backend/app/services/: query_cache.py  query_catalog.py  query_materializer.py  query_runner.py  unified_snapshot.py
backend/tests/: test_query_models.py  test_query_runner.py  test_unified_first_page_behavior.py  test_unified_snapshot.py
database/: consulta_base.sql  consulta_base_unificada.sql  consulta_unificada_resumen_table.sql  kardex.sql  optimization_indexes.sql  transferencias_tiendas.sql  ventas.sql
deploy/: .env.production.example  Caddyfile
docs/: BACKLOG.md  TECHNICAL_PLAN.md
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json
frontend/electron/: main.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  queryFilters.test.ts  queryFilters.ts  styles.css  types.ts
shared/: types.d.ts
