[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unificador-consultas-backend"
version = "0.1.0"
description = "FastAPI backend for SQL Server query unification."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "fastapi>=0.115.0",
    "pytest>=8.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "pyodbc>=5.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
